# DyDJ-Match

./: .gitignore  CMakeLists.txt  README.md  downloadAndCompileAlgora  easyCompile  updateInfoHeader
Algora/: README
docs/: Configuration.md
examples/: all-options.cfg  minimal.cfg
src/: main.cpp  parse_configuration.h  parse_parameters.h
src/algorithm/: batch_invariant_greedy.h  batch_iterative_greedy.h  batch_node_centered.h  disjoint_matching_algorithm.h  dynamic_greedy.h  greedy_kec_hybrid.h  iterative_greedy.h  k_edge_coloring.h  matching_defs.h  node_centered.h
src/datastructure/: approximate_bucket_queue.h  kcoloring.h  kcoloring_extensions.h  kcoloring_utilities.h
src/matching/coloring/: mg_matching.cpp  mg_matching.h
src/tools/: aggregation.h  analysis_algo.h  chronotimer.h  color_set.h  datatable.h  edge_ranking_analysis_algo.h  utility.h
